--- a/.github/workflows/service-deploy.yaml
+++ b/.github/workflows/service-deploy.yaml
@@ -8,7 +8,6 @@ on:
 env:
   EC2_PUBLIC_IP: 16.170.219.21
 
-
 jobs:
   PolybotBuild:
     runs-on: ubuntu-latest
@@ -16,11 +15,11 @@ jobs:
       - name: Checkout the repo code
         uses: actions/checkout@v2
 
-      - name: Build and push image
+      - name: Build and push Polybot image
         run: |
           cd polybot
           docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_PASSWORD }}
-          IMAGE_NAME=polybot:${{ github.run_number }}
+          IMAGE_NAME=${{ secrets.DOCKERHUB_USERNAME }}/polybot:${{ github.run_number }}
           docker build -t $IMAGE_NAME .
           docker push $IMAGE_NAME
 
@@ -30,16 +29,16 @@ jobs:
       - name: Checkout the repo code
         uses: actions/checkout@v2
 
-      - name: Build and push image
+      - name: Build and push YOLO5 image
         run: |
           cd yolo5
           docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_PASSWORD }}
-          IMAGE_NAME=yolo5:${{ github.run_number }}
+          IMAGE_NAME=${{ secrets.DOCKERHUB_USERNAME }}/yolo5:${{ github.run_number }}
           docker build -t $IMAGE_NAME .
           docker push $IMAGE_NAME
 
   Deploy:
-    name: Deploy Docker compose project
+    name: Deploy Docker Compose project
     runs-on: ubuntu-latest
     needs:
       - PolybotBuild
@@ -65,7 +64,7 @@ jobs:
           username: ubuntu
           key: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
           script: |
-            # התקנת Docker + docker compose plugin (v2)
+            # התקנת Docker + docker compose plugin
             sudo apt-get remove -y docker docker-engine docker.io containerd runc || true
             sudo apt-get update
             sudo apt-get install -y ca-certificates curl gnupg
@@ -89,10 +88,10 @@ jobs:
             NGROK_DOMAIN=$(curl -s localhost:4040/api/tunnels | jq -r '.tunnels[0].public_url')
 
             echo """
-            POLYBOT_IMG_NAME=polybot:${{ github.run_number }}
-            YOLO5_IMG_NAME=yolo5:${{ github.run_number }}
+            POLYBOT_IMG_NAME=${{ secrets.DOCKERHUB_USERNAME }}/polybot:${{ github.run_number }}
+            YOLO5_IMG_NAME=${{ secrets.DOCKERHUB_USERNAME }}/yolo5:${{ github.run_number }}
             TELEGRAM_APP_URL=$NGROK_DOMAIN
             """ > .env
 
             docker compose down
-            docker compose up -d
+            docker compose up -d --build
