--- a/.github/workflows/service-deploy.yaml
+++ b/.github/workflows/service-deploy.yaml
@@ -19,8 +19,22 @@ jobs:
         run: |
           cd polybot
           docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_PASSWORD }}
-          IMAGE_NAME=${{ secrets.DOCKERHUB_USERNAME }}/polybot:${{ github.run_number }}
-          docker buildx build --platform linux/amd64 -t $IMAGE_NAME .
+          IMAGE_NAME=polybot:${{ github.run_number }}
+          docker build -t $IMAGE_NAME .
+          docker push $IMAGE_NAME
+
+  Yolo5Build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout the repo code
+        uses: actions/checkout@v2
+
+      - name: Build and push image
+        run: |
+          cd yolo5
+          docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_PASSWORD }}
+          IMAGE_NAME=yolo5:${{ github.run_number }}
+          docker build -t $IMAGE_NAME .
           docker push $IMAGE_NAME
 
   Deploy:
@@ -28,12 +42,13 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - PolybotBuild
+      - Yolo5Build
 
     steps:
       - name: Checkout the repo code
         uses: actions/checkout@v2
 
-      - name: Copy project files to the EC2
+      - name: Copy Compose files to the EC2
         uses: appleboy/scp-action@master
         with:
           host: ${{ env.EC2_PUBLIC_IP }}
@@ -42,37 +57,30 @@ jobs:
           source: .
           target: PolybotService/
 
-      - name: Run deployment on the EC2
+      - name: Update the Docker Compose project in the EC2
         uses: appleboy/ssh-action@master
         with:
           host: ${{ env.EC2_PUBLIC_IP }}
           username: ubuntu
           key: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
           script: |
-            sudo apt-get update
-            sudo apt-get install -y ca-certificates curl gnupg
-            sudo install -m 0755 -d /etc/apt/keyrings
-            curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /etc/apt/keyrings/docker.gpg
-            echo \
-              "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] \
-              https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | \
-              sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
-            sudo apt-get update
-            sudo apt-get install -y docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin jq
-            sudo systemctl start docker
+            sudo apt-get update && sudo apt-get install -y jq
 
             cd PolybotService/
+
             echo -n "${{ secrets.TELEGRAM_BOT_TOKEN }}" > telegram_bot_token.secret
 
             NGROK_DOMAIN=$(curl -s localhost:4040/api/tunnels | jq -r '.tunnels[0].public_url')
 
             echo """
-            POLYBOT_TAG=${{ github.run_number }}
+            POLYBOT_IMG_NAME=polybot:${{ github.run_number }}
+            YOLO5_IMG_NAME=yolo5:${{ github.run_number }}
             TELEGRAM_BOT_TOKEN=${{ secrets.TELEGRAM_BOT_TOKEN }}
             BOT_APP_URL=$NGROK_DOMAIN
-            BUCKET_NAME=${{ secrets.BUCKET_NAME }}
-            MONGO_COLLECTION=${{ secrets.MONGO_COLLECTION }}
+            MONGO_COLLECTION=predictions
+            BUCKET_NAME=sos-cloud-ai-detections
             """ > .env
 
+            docker container rm -f yolo5 || true
             docker compose down
             docker compose up -d
